Make training duration depend on NUM_TRAIN_STEPS and TRAIN_INTERVAL_LENGTH

--- a/test_run_configs/cpu_oes_subset_seq.yaml
+++ b/test_run_configs/cpu_oes_subset_seq.yaml
@@ -3,7 +3,8 @@ GENERAL_CONFIG:
   DEVICE: "cpu"
   DTYPE: float32
   SEED: 0
-  NUM_EPOCHS: 10
+  NUM_TRAIN_STEPS: 50
+  TRAIN_INTERVAL_LENGTH: 10
 
 DATA_CONFIG:
   IS_CIFAR10: false
@@ -26,6 +27,7 @@ OPTIMIZER_CONFIG:
   POPSIZE: 10
   SIGMA: 0.1
   USE_ANTITHETIC_SAMPLING: true
+  USE_RANK_TRANSFORM: true
 
 LR_SCHEDULER_CONFIG:
   LR_SCHEDULER_SLUG: null
